# azure-ai-showcase-demo

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md  copilot-review.yml
.github/workflows/: backend-build.yml  create-resource-group.yml  delete-resource-group.yml  frontend-build.yml  infra-deploy.yml
apps/backend/: .env.examples  Dockerfile  README.md  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: __init__.py  deps.py
apps/backend/app/api/routes/: realtime.py
apps/backend/app/config/: avatar_options.py  language_options.py  realtime_models.py  voice_options.py
apps/backend/app/core/: config.py
apps/backend/app/schemas/: realtime.py
apps/backend/app/services/: voice_live_session.py
apps/frontend/: .dockerignore  .env.example  Dockerfile  README.md  nginx.conf  package.json  tsconfig.node.json  vite.config.ts
apps/frontend/public/: audio-processor.js
apps/frontend/src/: App.tsx  index.css
apps/sample/: live_voice_sample.py
docs/: avatar-and-audio-input-spec.md  realtime-avatar-implementation.md  realtime-avatar-plan.md  voice-options.md
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/components/: DemoCard.tsx  DemoFilter.tsx
frontend/src/pages/: TopPage.tsx
frontend/src/utils/: mockData.ts
infra/: AGENTS.md  README.md  main.bicep  main.bicepparam
infra/app/: README.md  container-app-backend.bicep  container-app-frontend.bicep  container-registry.bicep
infra/core/: README.md
(+15 files in other folders)
