[project]
name = "azure-ai-showcase-backend"
version = "0.1.0"
description = "FastAPI backend for Azure AI Showcase Demo."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "h-morozumi" }]
dependencies = [
  "aiohttp>=3.13.2",
  "azure-ai-voicelive>=1.1.0",
  "azure-identity>=1.25.1",
  "fastapi[standard]>=0.120.3",
  "pyaudio>=0.2.14",
  "python-dotenv>=1.2.1",
  "uvicorn[standard]>=0.32.1",
]


[dependency-groups]
dev = [
  "mypy>=1.11,<1.12",
  "ruff>=0.7.0,<0.8.0",
  "pytest>=8.3,<8.4",
]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
plugins = []
strict = true
